styles.css
/* MAIN */


body {
    background: rgb(63,94,251);
    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(70,252,227,1) 100%);
}

.content {
    margin: auto;
    width: 70%;
    box-sizing: border-box;
    margin-bottom: 20px;
}

.main {
    display: flex;
}

h1 {
    font-family: 'VT323', monospace;
    font-size: 4rem;
    text-align: center;
}

p {
    font-family: 'Nanum Gothic Coding', monospace;
    font-size: 1.1rem;
}

/* GRID */

.grid-wrapper {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
}

.grid-container {
    border: 0.5px solid black;
    display: grid;
    width: 500px;
    height: 500px;
    box-shadow: 5px 5px black;
}

.square {
    background-color: #ffffff;
    border: 0.5px solid black;
}


/* BUTTONS */

.navigation {
    border-radius: 5px;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    width: 30%;
}

.slider-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.buttons-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 30px;
}

button {
    background: transparent;
    font-family: 'Nanum Gothic Coding', monospace;
    font-size: 1rem;
    border: 1px solid black;
    border-radius: 5px;
    color: black;
    width: 150px;
    height: 30px;
}

button:hover {
    transform: scale(1.2);
}

button.active {
    background-color: black;
    color: #ffffff;
}


/* COLOR PICKER */


#color-picker {
    overflow: hidden;
    width: 35px;
    height: 35px;
}

.color-picker-container {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8px;
}

input[type="color"] {
    border-radius: 5px;
    padding: 0;
}

input[type="color"]::-moz-color-swatch {
    border: none;
}

input[type="color"]::-webkit-color-swatch-wrapper {
    padding: 0;
    border-radius: 0;
  }

input[type="color"]::-webkit-color-swatch {
    border: none;
}

input[type='color']:hover {
    transform: scale(1.2);
}

input[type='color']:active {
    transition: transform 0.05s ease-in-out;
    transform: scale(1);
}


/* SLIDER */


input[type="range"] {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid black;
    background-color: transparent;
    border-radius: 10px;
}

input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 15px;
    height: 15px;
    background-color: black;
    border-radius: 10px;
    cursor: pointer;
}
  
input[type="range"]::-moz-range-thumb {
    width: 15px;
    height: 15px;
    background-color: black;
    border-radius: 10px;
    cursor: pointer;
}

.slider-container {
    height: 100px;
  }

.slider {
    width: 150px;
    height: 25px; 
    -webkit-transition: .2s;
    transition: opacity .2s;
}

.slider:hover {
    opacity: 1;
}

/* FOOTER */

.footer {
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
    font-size: 1rem;
    text-align: center;
    padding: 10px;
    margin-top: 50px;
}

a {
    text-decoration: none;
    color: #36f3d9;
}

